--- a/ng-app/stream-central/src/app/movies/movies.component.html
+++ b/ng-app/stream-central/src/app/movies/movies.component.html
@@ -6,7 +6,7 @@
                     <div class="card">
                         <a [routerLink]="['content', content.tmdb_id]">
                             <img src={{content.poster}} class="card-img-top" alt="...">
-                            <button class="favorite-btn"></button>
+                            <button class="favorite-btn" title="Add to Favorites" (click)="addToFavorites(content.tmdb_id); $event.stopPropagation()"></button>
                         </a>
                     </div>
                     <h3 class="content-title">{{content.title}}</h3>
