--- a/ng-app/stream-central/src/app/app.component.html
+++ b/ng-app/stream-central/src/app/app.component.html
@@ -23,7 +23,7 @@
         <a href="https://streamcentral.azurewebsites.net/user/logOut" class="btn btn-info">LogOut</a>
       </div>
       <ng-template #signInButton>
-        <a class="btn btn-info">Login</a>
+        <a href="https://streamcentral.azurewebsites.net/auth/google" class="btn btn-info">Login</a>
       </ng-template>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
